# palantir

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_REVIEW.md  CLA.md  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DOC.md  LICENSE-COMMERCIAL.md  README.md  REVIEW.md  architecture-review.md  todo.md
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.github/: pull_request_template.md
.zed/: settings.json
anim-derive/: Cargo.toml
anim-derive/src/: lib.rs
assets/: reference-palette.toml
benches/: AGENTS.md  CLAUDE.md  alloc_free.rs  alloc_free_gpu.rs  alloc_resize.rs  animation.rs  caches.rs  cascade.rs  compose_cache.rs  composer.rs  curve_pipeline.rs  damage.rs  damage_merge_gpu.rs  encode_cache.rs  frame.rs  gradient.rs  half_simd.rs  input_throughput.rs  layout.rs  measure_cache.rs  paint_anims.rs  scrollzoom.rs  stroke_tessellate.rs  text_atlas.rs  text_edit.rs  text_shape.rs  widget_styles.rs
benches/results/: asus-rog-arch.txt  frame.txt  macbook-air-m5-15.txt  unknown.txt
benches/support/: frame_fixture.rs
docs/: REVIEW.md  composer-cache.md  cpu-arm-profiling.md  damage-rendering.md  data-structures-review-2026-07-19.md  drag.md  encode-cache.md  frame-cpu-profile-2026-07-17.md  frame-skipping.md  grid.md  hot-path-struct-audit.md  incremental-rendering.md  intrinsics.md  layouts-todo.md  measure-cache.md  module-map.md  multi-text-per-leaf.md  paint-rect-unification.md  perf-opportunities.md  popups.md  potential-features.md  profiling.md  proposed-features.md  review-backend-window-renderer.md  roadmap.md  rollup-hash-packing.md  rounded-clip.md  scratch.md  scrollbars.md  scrollview.md  test-consolidation-plan.md  text-reshape-skip.md  text-wrapping.md  text.md  textedit.md  todo.md  tree-redesign.md  widget-id-trait.md
docs/cache-history/: compose.md  encode.md
docs/reviews/: composer.md
docs/roadmap/: README.md  accessibility.md  actions.md  animations.md  brushes.md  caches.md  cascade-cache.md  damage-merge-research.md  damage.md  deferred-shapes.md  depth-prepass.md  focus.md  glyphon-rewrite.md  hot-path-redesign.md  i18n.md  images.md  input.md  invalidation.md  layering.md  layouts.md  mesh-batching.md  mesh-shapes.md  multi-rect-damage.md  multiwindow.md  paint-tick.md  polyline-retirement.md  renderer.md  scratch.md  scroll-zoom.md  scroll.md  speculative.md  spinner.md  state.md  text-edit.md  text.md  tooling.md
examples/: counter.rs  custom_widget.rs  dump_theme.rs  frame_visual.rs  helloworld.rs  theme.toml
examples/showcase/: alignment.rs  animations.rs  bezier.rs  buttons.rs  clip.rs  complex_pan_zoom.rs  disabled.rs  drag.rs  gap.rs  gradients.rs  grid.rs  justify.rs  lines.rs  main.rs  mesh.rs  pan_zoom.rs  pan_zoom_auto.rs  panels.rs  popup.rs  rounded.rs  scroll.rs  sizing.rs  spacing.rs  swatch.rs  text.rs  text_edit.rs  text_zorder.rs  transform.rs  visibility.rs  wrap.rs
palantir/: Cargo.toml
palantir/src/: fragment.rs  layout.rs  lib.rs  style.rs  view.rs
references/: SUMMARY.md  bevy_ui.md  clay.md  cosmic-text.md  dioxus.md  druid.md  egui.md  floem.md  flutter.md  freya.md  glyphon.md  iced.md  imgui.md  kurbo.md  lyon.md  makepad.md  morphorm.md  nuklear.md  parley.md  peniko.md  quirky.md  raylib.md  slint.md  stretch.md  taffy.md  vello.md  vizia.md  wpf.md  xilem.md  yoga.md
scripts/: bench-perf.sh  fetch-refs.sh  profile-bench.sh  profile-metal.sh  test-all.sh
src/: app.rs  bench_support.rs  cascade.rs  clipboard.rs  clock.rs  context.rs  debug_overlay.rs  display.rs  element.rs  frame_arena.rs  geom.rs  host.rs  host_shared.rs  input.rs  layout.rs  lib.rs  main.rs  offscreen_host.rs  record_store.rs  shape.rs  test_support.rs  tree.rs  ui.rs  window.rs  window_renderer.rs  winit_host.rs
src/animation/: animatable.rs  animations.md  easing.rs  mod.rs  paint.rs  review.md  serde.rs  spring.rs  tests.rs
src/bench/: animation.rs  input.rs  mod.rs  text.rs
src/common/: cache_arena.rs  clipboard.rs  content_hash.rs  frame_arena.rs  hash.rs  index16.rs  live_arena.rs  mod.rs  platform.rs  sparse_column.rs  time.rs
src/diagnostics/: gpu_stats.rs  mod.rs
src/element/: mod.rs  tests.rs
src/forest/: frame_arena.rs  layer.rs  mod.rs  node.rs  per_layer.rs  rollups.rs  seen_ids.rs  shapes.rs  visibility.rs
src/host/: clock.rs  context.rs  mod.rs  offscreen.rs  shared.rs  test_gpu.rs  window_driver.rs  window_renderer.rs
src/input/: hit_index.rs  keyboard.rs  mod.rs  pointer.rs  policy.rs  response.rs  sense.rs  shortcut.rs  subscriptions.rs  tests.rs
src/layout/: REVIEW.md  axis.rs  cache.rs  engine.rs  intrinsic.md  intrinsic.rs  layoutengine.rs  measure-cache.md  mod.rs  result.rs  support.rs  tests.rs
src/primitives/: align.rs  approx.rs  arc.rs  background.rs  bezier.rs  brush.rs  color.rs  corners.rs  display.rs  fill_wire.rs  grid.rs  half_simd.rs  image.rs  interned_str.rs  justify.rs  lane_serde.rs  layout.rs  mesh.rs  mod.rs  node_flags.rs  num.rs  paint.rs  rect.rs  sense.rs  serde.rs  shadow.rs  size.rs  sizing.rs  spacing.rs  span.rs  stroke.rs  stroke_tessellate.rs  style.rs  track.rs  transform.rs  visibility.rs  visuals.rs  widget_id.rs
src/renderer/: assets.rs  buffer.rs  caches.rs  composer.rs  context.rs  damage.rs  gpu_view.rs  gradient_atlas.rs  image_registry.rs  mod.rs  painter.rs  pipeline.rs  plan.rs  quad.rs  quad.wgsl  render_buffer.rs  render_owner.rs  review-notes.md  rounded-clip.md  texture_id.rs
src/scene/: mod.rs  record_store.rs  seen_ids.rs
src/shape/: curve.rs  image.rs  mesh.rs  mod.rs  polyline.rs  rect.rs  shadow.rs  stroke_bounds.rs  style.rs  tests.rs  triangle.rs
src/showcase/: alignment.rs  animations.rs  app_state.rs  bezier.rs  buttons.rs  checkbox.rs  clip.rs  complex_pan_zoom.rs  context_menu.rs  controls.rs  cube.rs  debug.rs  dialogs.rs  disabled.rs  drag.rs  exit_confirm.rs  gap.rs  gradients.rs  grid.rs  id_collisions.rs  image.rs  justify.rs  layout.rs  lines.rs  mesh.rs  mod.rs  overlays.rs  pan_zoom.rs  pan_zoom_auto.rs  panels.rs  popup.rs  (+21 more)
tests/: visual_harness.rs  widget_builder_abi.rs
(+452 files in other folders)
