[package]
name = "palantir"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
exclude = ["tmp/", "references/"]

[lib]
doctest = false

[dependencies]
palantir-anim-derive = { path = "anim-derive" }
arboard = "3.6"
bitflags = "2.13"
bytemuck = { version = "1.25", features = ["derive"] }
encase = "0.12"
cosmic-text = "0.19"
fixedbitset = "0.5"
glam = { version = "0.33", features = ["bytemuck", "encase", "serde"] }
etagere = "0.3"
half = { version = "2.7", features = ["bytemuck"] }
rustc-hash = "2.1"
tracing = "0.1"
pollster = "0.4"
wgpu = { version = "29.0", default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan", "metal", "dx12"] }
winit = "0.30"
rayon = "1.12"
padding-struct = "0.2"
soa-rs = "1.0"
strum = { version = "0.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tinyvec = { version = "1.11", features = ["serde"] }
smol_str = "0.3"
unicode-segmentation = "1.13"
profiling = { version = "1.0", default-features = false, features = ["procmacros"] }
# Pinned to whatever `profiling/profile-with-tracy` resolves to so cargo
# dedupes to one tracy-client instance (one FFI connection). Bump in
# lockstep with `profiling`.
tracy-client = { version = "0.18", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
backtrace = "0.3"
criterion = "0.8"
dhat = "0.3"
gethostname = "1.1"
image = { version = "0.25", default-features = false, features = ["png"] }
toml = "1.1"

[[test]]
name = "visual"
path = "tests/visual/main.rs"
required-features = ["internals"]

[[test]]
name = "alloc"
path = "tests/alloc/main.rs"
required-features = ["internals"]

[[bench]]
name = "frame"
harness = false
required-features = ["internals"]

[[bench]]
name = "alloc_free"
harness = false
required-features = ["internals"]

[[bench]]
name = "alloc_resize"
harness = false
# Needs `Ui::for_test_text()` (internals-gated) so it shapes with real
# cosmic-text. With the mono fallback the resize path's paint counts
# stay constant, the cascade cache reuses in place, and the bench
# reports a false 0 — see the module docs.
required-features = ["internals"]

# No `required-features`: drives only the public `OffscreenHost` headless
# render path + the public widget fixture — no `internals` reach-in.
[[bench]]
name = "alloc_free_gpu"
harness = false

[[bench]]
name = "text_atlas"
harness = false
required-features = ["internals"]

[[bench]]
name = "input_throughput"
harness = false
required-features = ["internals"]

[[bench]]
name = "caches"
harness = false
required-features = ["internals"]

[[bench]]
name = "damage"
harness = false
required-features = ["internals"]

[features]
# Exposes `internals::*` (cache reset + introspection helpers used by
# `benches/`). Tests get the same module without the feature because
# `cfg(test)` is also gated on.
internals = []
# Profiler backends — pick one. Off by default (zero overhead).
# Tracy needs an external viewer; wgpu's own GPU zones light up
# automatically because `profiling` is a singleton in the dep graph.
profile-with-tracy = ["profiling/profile-with-tracy", "dep:tracy-client"]
profile-with-puffin = ["profiling/profile-with-puffin"]

[profile.bench]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release-max]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false



# Optimize heavy dependencies even in dev/test builds
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.wgpu-core]
opt-level = 3
[profile.dev.package.wgpu-hal]
opt-level = 3
[profile.dev.package.wgpu-types]
opt-level = 3
[profile.dev.package.naga]
opt-level = 3
[profile.dev.package.gpu-descriptor]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.spirv]
opt-level = 3
[profile.dev.package.ash]
opt-level = 3
[profile.dev.package.cosmic-text]
opt-level = 3
[profile.dev.package.swash]
opt-level = 3
[profile.dev.package.fontdb]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package."owned_ttf_parser"]
opt-level = 3
[profile.dev.package.font-types]
opt-level = 3
[profile.dev.package.read-fonts]
opt-level = 3
[profile.dev.package.skrifa]
opt-level = 3
