[package]
name = "aperture"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
exclude = ["AGENTS.md", "CLAUDE.md", ".tmp/"]

[lints.rust]
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[lints.clippy]
items_after_test_module = "deny"

[lib]
doctest = false

[[bin]]
name = "showcase"
path = "src/bin/showcase/main.rs"
required-features = ["showcase"]

[dependencies]
aperture-anim-derive = { path = "anim-derive" }
arboard = { version = "3.6", default-features = false }
bitflags = "2.13"
bytemuck = { version = "1.25", features = ["derive"] }
encase = "0.12"
cosmic-text = "0.19"
fixedbitset = "0.5"
# Window/image extents use i32/u16/u32; Shadow and GPU wires need the integration features.
glam = { version = "0.33", default-features = false, features = ["std", "i32", "u16", "u32", "bytemuck", "encase", "serde"] }
etagere = "0.3"
half = { version = "2.7", features = ["bytemuck"] }
rustc-hash = "2.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
pollster = "1.0"
wgpu = { version = "30.0", default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan", "metal", "dx12"] }
winit = "0.30"
padding-struct = "0.2"
soa-rs = "1.0"
strum = { version = "0.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
# Gradient stop arrays are part of the serialized public theme format.
tinyvec = { version = "1.12", features = ["serde"] }
unicode-segmentation = "1.13"

criterion = { version = "0.8", optional = true }
dhat = { version = "0.3", optional = true }
gethostname = { version = "1.1", optional = true }
# Pinned to whatever `profiling/profile-with-tracy` resolves to so cargo
# dedupes to one tracy-client instance (one FFI connection). Bump in
# lockstep with `profiling`.
tracy-client = { version = "0.18", default-features = false, optional = true }
profiling = { version = "1.0", default-features = false, features = ["procmacros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
backtrace = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.12"
static_assertions = "1.1"
toml = "1.1"

[[test]]
name = "visual"
path = "tests/visual/main.rs"
required-features = ["internals"]

[[test]]
name = "alloc"
path = "tests/alloc/main.rs"
required-features = ["internals"]

[[example]]
name = "frame_visual"
required-features = ["internals"]

[[bench]]
name = "frame"
harness = false
required-features = ["internals"]

[[bench]]
name = "animation"
harness = false
required-features = ["internals"]

[[bench]]
name = "alloc_free"
harness = false
required-features = ["internals"]

[[bench]]
name = "alloc_resize"
harness = false
# Needs `Ui::for_test_text()` (internals-gated) so it shapes with real
# cosmic-text. With the mono fallback the resize path's paint counts
# stay constant, the cascade cache reuses in place, and the bench
# reports a false 0 — see the module docs.
required-features = ["internals"]

[[bench]]
name = "alloc_free_gpu"
harness = false
required-features = ["internals"]

[[bench]]
name = "text_atlas"
harness = false
required-features = ["internals"]

[[bench]]
name = "curve_pipeline"
harness = false
required-features = ["internals"]

[[bench]]
name = "text_shape"
harness = false
required-features = ["internals"]

[[bench]]
name = "input_throughput"
harness = false
required-features = ["internals"]

[[bench]]
name = "caches"
harness = false
required-features = ["internals"]

[[bench]]
name = "damage"
harness = false
required-features = ["internals"]

[[bench]]
name = "composer"
harness = false
required-features = ["internals"]

[[bench]]
name = "gradient"
harness = false
required-features = ["internals"]

[[bench]]
name = "cascade"
harness = false
required-features = ["internals"]

[features]
# Compiles the source-level benchmark drivers and exposes their function-only
# facade to the thin external targets.
internals = ["dep:criterion", "dep:dhat", "dep:gethostname"]
# Enables the bundled widget-tour binary and its logging setup.
showcase = ["dep:tracing-subscriber"]
# Profiler backend — off by default (zero overhead).
# Tracy needs an external viewer; wgpu's own GPU zones light up
# automatically because `profiling` is a singleton in the dep graph.
profile-with-tracy = ["profiling/profile-with-tracy", "dep:tracy-client"]

[profile.bench]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release-max]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false



# Optimize heavy dependencies even in dev/test builds
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.wgpu-core]
opt-level = 3
[profile.dev.package.wgpu-hal]
opt-level = 3
[profile.dev.package.wgpu-types]
opt-level = 3
[profile.dev.package.naga]
opt-level = 3
[profile.dev.package.gpu-allocator]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.spirv]
opt-level = 3
[profile.dev.package.ash]
opt-level = 3
[profile.dev.package.cosmic-text]
opt-level = 3
[profile.dev.package.swash]
opt-level = 3
[profile.dev.package.fontdb]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package."owned_ttf_parser"]
opt-level = 3
[profile.dev.package.font-types]
opt-level = 3
[profile.dev.package.read-fonts]
opt-level = 3
[profile.dev.package.skrifa]
opt-level = 3
