[package]
name = "aperture-anim-derive"
version = "0.1.0"
edition = "2024"
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints.rust]
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[lints.clippy]
items_after_test_module = "deny"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "3.0", features = ["full"] }
